--- a/src/App.css
+++ b/src/App.css
@@ -80,3 +80,30 @@ nav ul{
 {
  color:white;
 }
+.code_profile
+{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border:2px solid black;
+  width:100%;
+  box-sizing: border-box;
+}
+.gituser
+{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.imageG{
+  width:200px;
+}
+.bio
+{
+  margin:5px;
+  width:50%;
+  border:1px solid rgb(78, 189, 223);
+  background-color: #54a0ff;
+}
